# arm-sysregs

./: AUTHORS  Cargo.toml  registers.toml
arm-sysregs/: CHANGELOG.md  Cargo.toml  README.md
arm-sysregs/examples/: log_all.rs
arm-sysregs/src/: aarch32.rs  aarch64.rs  fake.rs  lib.rs  macros.rs  manual.rs
arm-sysregs/src/fake/: generated.rs
generate-sysregs/: Cargo.toml  README.md  registers.toml
generate-sysregs/src/: config.rs  enums.rs  json_input.rs  main.rs  output.rs
generate-sysregs/src/json_input/: conditions.rs
src/: lib.rs
