# SPDX-FileCopyrightText: Copyright The arm-sysregs Contributors.
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-sysregs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Armv8-A system register helper crate"
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-sysregs.git"
keywords = ["arm", "aarch64", "sysregs", "system", "registers"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"
rust-version = "1.88"

[dependencies]
