# SPDX-FileCopyrightText: Copyright The arm-sysregs Contributors.
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "arm-sysregs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Armv8-A system register helper crate"
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-sysregs.git"
authors = ["Andrew Walbran <qwandor@google.com>"]
keywords = ["arm", "aarch64", "sysregs", "system", "registers"]
categories = ["hardware-support", "embedded", "no-std", "no-std::no-alloc"]
readme = "README.md"
rust-version = "1.88"

[dependencies]
bitflags = "2.9.1"
paste = "1.0.14"

[features]
el1 = []
el2 = ["el1"]
el3 = ["el2"]
fakes = []

[lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
unreadable_literal = "deny"

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
