# SPDX-FileCopyrightText: Copyright The arm-sysregs Contributors.
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "generate-sysregs"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A tool to generate a crate of accessors for Arm system registers based on the JSON description file."
repository = "https://git.trustedfirmware.org/arm-firmware-crates/arm-sysregs.git"
keywords = ["arm", "aarch64", "sysregs", "system", "registers"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
arm-sysregs-json = "0.2.0"
clap = { version = "4.5.51", features = ["derive"] }
eyre = "0.6.12"
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
